# miscprojects

./: .gitignore  LICENSE  README.md  README.org  graph.c  main.c  run.sh  small.txt
6502kit/: 4bit_display.s  6502Debug.ino  7segment.go  README.md  blink.s  hello-world-final.s  ramtest.s  testrom.go  upload_asm.sh
GeoImageGenerator/: README.md  color.c  color.h  image.c  image.h  main.c  types.h
Laplacian/: .gitignore  Laplacian.sln  run.sh
PickleBot/: README.org  picklebot.ai  picklebot.js  picklebot.json
Turing/: .gitignore  README.org
advent2020/: advent2020.cabal  package.yaml
atari800xl/: README.org  atari800.ino
bivalvia/: Cargo.toml
bpl/: Cargo.toml  README.md  test.asm  test.b
camlfuck/: README.org  camlfuck.ml  dune  hello.bf
cats_effect_fs2/: build.sbt
cgol/: .gitignore  README.txt  cgol.c  compile.sh
complexlaplacian/: Makefile  README.org
dynamic_comp/: .gitignore  Makefile
eb_compression/: .gitignore  Makefile  eb.c
fframes_video_test/: Cargo.toml
fractal_gpu/: Cargo.toml
glsl_mandelbrot/: Cargo.toml  LICENSE  README.md
glsl_mandelbrot/assets/: grid.frag  identity.vert
glsl_mandelbrot/src/: debug.rs  fps.rs  main.rs  render_context.rs
gotour/: README.md  arrays_slices.go  binary_trees.go  errors.go  flow_8.go  (+10 more)
wavy_crocket/: .gitignore  Cargo.toml
wavy_crocket/lisp/: common.lisp  drums.lisp  mario.lisp  mary.lisp  simple.lisp  song.lisp  wd-note-frequencies.lisp  wd.lisp
wavy_crocket/lisp/tests/: common.lisp
wavy_crocket/src/: interpreter.rs  main.rs  math.rs  parser.rs  sound_handler.rs  wave_file_handler.rs
(+347 files in other folders)
