[package]
name = "magicpixel"
version = "0.1.0"
authors = ["Elijah Mirecki <elimirks@gmail.com>", "Joshua Wolfe <joshwolfe.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
rand = "0.8.3"
bincode = "1.3.3"
clap = "3.0.0-beta.2"

[dependencies.serde]
version = "1.0.126"
features = ["derive"]

[dependencies.sdl2]
version = "0.34"
features = ["ttf"]

[profile.dev]
opt-level = 3

[profile.release]
debug = true
