[package]
name = "wavy_crocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace-on-stack-overflow = "0.2.0"
rand = "0.8"
soloud = "1"
plotters = "0.3"
cairo-rs = "0.15"
gtk = "0.15"
plotters-cairo = "0.3"
nalgebra = "0.31"
